@@ -18,11 +18,17 @@ import io.codelaser.maddi.cst.api.element.SourceSet;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
+import java.io.ByteArrayInputStream;
+import java.io.File;
 import java.io.IOException;
+import java.io.OutputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
+import java.util.jar.JarEntry;
+import java.util.jar.JarOutputStream;
+import java.util.jar.Manifest;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -42,7 +48,7 @@ public class TestPluginSourceSets {
         Path classes = Files.createDirectories(dir.resolve("build/classes/java/main"));
 
         SourceSet set = PluginSourceSets.sourceSet("p/main", ":p", List.of(src), classes,
-                StandardCharsets.UTF_8, false, null, 0);
+                StandardCharsets.UTF_8, false, null, 0, List.of(), List.of());
 
         assertNotNull(set);
         assertEquals(classes.toUri(), set.uri(), "the uri must be the class output, not the source directory");
@@ -65,7 +71,7 @@ public class TestPluginSourceSets {
         assertFalse(Files.exists(notCompiledYet));
 
         SourceSet set = PluginSourceSets.sourceSet("p/main", ":p", List.of(src), notCompiledYet,
-                StandardCharsets.UTF_8, false, null, 0);
+                StandardCharsets.UTF_8, false, null, 0, List.of(), List.of());
 
         assertNotNull(set);
         assertEquals(notCompiledYet.toUri(), set.uri(),
@@ -77,7 +83,7 @@ public class TestPluginSourceSets {
     public void noClassOutputFallsBackToTheSourceDirectory(@TempDir Path dir) throws IOException {
         Path src = Files.createDirectories(dir.resolve("src"));
 
-        SourceSet set = PluginSourceSets.sourceSet("p/main", null, List.of(src), null, null, false, null, 0);
+        SourceSet set = PluginSourceSets.sourceSet("p/main", null, List.of(src), null, null, false, null, 0, List.of(), List.of());
 
         assertNotNull(set);
         assertEquals(src.toUri(), set.uri());
@@ -94,11 +100,11 @@ public class TestPluginSourceSets {
         Path absent = dir.resolve("src/main/generated");
 
         SourceSet set = PluginSourceSets.sourceSet("p/main", ":p", List.of(real, absent), null, null, false,
-                null, 0);
+                null, 0, List.of(), List.of());
         assertNotNull(set);
         assertEquals(List.of(real), set.sourceDirectories());
 
-        assertNull(PluginSourceSets.sourceSet("p/main", ":p", List.of(absent), null, null, false, null, 0),
+        assertNull(PluginSourceSets.sourceSet("p/main", ":p", List.of(absent), null, null, false, null, 0, List.of(), List.of()),
                 "a source set over no existing directory must not be created at all");
     }
 
@@ -112,7 +118,7 @@ public class TestPluginSourceSets {
         assertFalse(PluginSourceSets.isModularSource(List.of(plain)));
         assertTrue(PluginSourceSets.isModularSource(List.of(plain, modular)));
 
-        SourceSet set = PluginSourceSets.sourceSet("m/main", ":m", List.of(modular), null, null, false, null, 0);
+        SourceSet set = PluginSourceSets.sourceSet("m/main", ":m", List.of(modular), null, null, false, null, 0, List.of(), List.of());
         assertNotNull(set);
         assertTrue(set.isModule());
     }
@@ -126,11 +132,11 @@ public class TestPluginSourceSets {
     @Test
     public void sourceReleaseIsRecordedPerSet(@TempDir Path dir) throws IOException {
         Path src = Files.createDirectories(dir.resolve("src"));
-        SourceSet set = PluginSourceSets.sourceSet("p/main", ":p", List.of(src), null, null, false, null, 17);
+        SourceSet set = PluginSourceSets.sourceSet("p/main", ":p", List.of(src), null, null, false, null, 17, List.of(), List.of());
         assertNotNull(set);
         assertEquals(17, set.sourceRelease());
         // 0 means "the build said nothing", which is not the same as "release 0"
-        SourceSet silent = PluginSourceSets.sourceSet("p/test", ":p", List.of(src), null, null, true, null, 0);
+        SourceSet silent = PluginSourceSets.sourceSet("p/test", ":p", List.of(src), null, null, true, null, 0, List.of(), List.of());
         assertNotNull(silent);
         assertEquals(0, silent.sourceRelease());
     }
@@ -147,5 +153,197 @@ public class TestPluginSourceSets {
         assertEquals(0, PluginSourceSets.parseRelease(""));
         assertEquals(0, PluginSourceSets.parseRelease("VERSION_21"));
         assertEquals(0, PluginSourceSets.parseRelease("0"));
+    }
+
+    /**
+     * ⛔⛔ {@code AUTOMATIC} AND {@code NONE} ARE NOT THE SAME ANSWER, AND ONLY ONE OF THEM WORKS. Gradle routes a
+     * jar to the module path when it carries a descriptor OR declares {@code Automatic-Module-Name}, and leaves
+     * every other jar on the class path -- which a named module cannot read. A {@code requires} on a
+     * {@code NONE} artifact therefore fails however correct the descriptor is, and that is the whole of the
+     * OpenSearch JPMS failure: the measurement was right and the build refused to provide what it named.
+     */
+    @Test
+    public void moduleKindSeparatesTheThreeWaysAJarCanPresentItself(@TempDir Path dir) throws IOException {
+        File explicit = jar(dir.resolve("explicit.jar"), null, "module-info.class");
+        File multiRelease = jar(dir.resolve("mr.jar"), null, "META-INF/versions/9/module-info.class");
+        // ⛔ MEASURED: netty keeps its descriptor at versions/11, bouncycastle at 9. Reading only 9 answered
+        // NONE for every netty jar -- and netty is in the measured failure list this classification feeds.
+        File netty = jar(dir.resolve("netty.jar"), null, "META-INF/versions/11/module-info.class");
+        File later = jar(dir.resolve("later.jar"), null, "META-INF/versions/17/module-info.class");
+        File automatic = jar(dir.resolve("automatic.jar"), "Automatic-Module-Name: com.acme.lib\n", "com/acme/A.class");
+        File osgiOnly = jar(dir.resolve("osgi.jar"), "Bundle-SymbolicName: org.jsr-305\n", "javax/annotation/A.class");
+        File noManifest = jar(dir.resolve("bare.jar"), null, "p/A.class");
+
+        assertEquals(PluginSourceSets.ModuleKind.EXPLICIT, PluginSourceSets.moduleKind(explicit));
+        assertEquals(PluginSourceSets.ModuleKind.EXPLICIT, PluginSourceSets.moduleKind(multiRelease));
+        assertEquals(PluginSourceSets.ModuleKind.EXPLICIT, PluginSourceSets.moduleKind(netty), "versions/11");
+        assertEquals(PluginSourceSets.ModuleKind.EXPLICIT, PluginSourceSets.moduleKind(later), "versions/17");
+        assertEquals(PluginSourceSets.ModuleKind.AUTOMATIC, PluginSourceSets.moduleKind(automatic));
+        // ⛔ THE jsr305 SHAPE. JPMS ignores the OSGi header, so this is NONE -- not AUTOMATIC.
+        assertEquals(PluginSourceSets.ModuleKind.NONE, PluginSourceSets.moduleKind(osgiOnly));
+        assertEquals(PluginSourceSets.ModuleKind.NONE, PluginSourceSets.moduleKind(noManifest));
+    }
+
+    /**
+     * ⚠ A directory is a sibling project's compile output. {@code Automatic-Module-Name} is a property of a jar
+     * MANIFEST, and no build tool derives one from a class-output directory, so a directory is EXPLICIT or it is
+     * NONE -- never AUTOMATIC.
+     */
+    @Test
+    public void aDirectoryIsExplicitOrNothing(@TempDir Path dir) throws IOException {
+        Path modular = Files.createDirectories(dir.resolve("modular"));
+        Files.write(modular.resolve("module-info.class"), new byte[]{(byte) 0xCA, (byte) 0xFE});
+        Path plain = Files.createDirectories(dir.resolve("plain"));
+
+        assertEquals(PluginSourceSets.ModuleKind.EXPLICIT, PluginSourceSets.moduleKind(modular.toFile()));
+        assertEquals(PluginSourceSets.ModuleKind.NONE, PluginSourceSets.moduleKind(plain.toFile()));
+    }
+
+    /** ⚠ CONTROL: something that is not a jar at all is NONE, and says so rather than throwing. */
+    @Test
+    public void whatCannotBeReadIsNotAModule(@TempDir Path dir) throws IOException {
+        Path notAJar = dir.resolve("notes.txt");
+        Files.writeString(notAJar, "this is not a jar");
+        assertEquals(PluginSourceSets.ModuleKind.NONE, PluginSourceSets.moduleKind(notAJar.toFile()));
+        assertEquals(PluginSourceSets.ModuleKind.NONE, PluginSourceSets.moduleKind(dir.resolve("absent.jar").toFile()));
+    }
+
+    /**
+     * ⚠ THE BEHAVIOUR THAT MUST NOT HAVE MOVED. {@code isModularArtifact} feeds {@code SourceSet.isModule()} and
+     * through it {@code JavaInspectorImpl}'s choice between javac's class path and module path. Widening it to
+     * include AUTOMATIC is a change to which artifacts land where, judged by a corpus run and not by this file;
+     * until then it stays EXPLICIT alone, and this test is what says so.
+     */
+    @Test
+    public void isModularArtifactStillMeansExplicitAlone(@TempDir Path dir) throws IOException {
+        File explicit = jar(dir.resolve("explicit.jar"), null, "module-info.class");
+        File automatic = jar(dir.resolve("automatic.jar"), "Automatic-Module-Name: com.acme.lib\n", "com/acme/A.class");
+        File osgiOnly = jar(dir.resolve("osgi.jar"), "Bundle-SymbolicName: org.jsr-305\n", "javax/annotation/A.class");
+
+        File v9 = jar(dir.resolve("v9.jar"), null, "META-INF/versions/9/module-info.class");
+        File v11 = jar(dir.resolve("v11.jar"), null, "META-INF/versions/11/module-info.class");
+
+        assertTrue(PluginSourceSets.isModularArtifact(explicit));
+        assertTrue(PluginSourceSets.isModularArtifact(v9));
+        assertFalse(PluginSourceSets.isModularArtifact(automatic));
+        assertFalse(PluginSourceSets.isModularArtifact(osgiOnly));
+        // ⛔ THE FROZEN DISAGREEMENT, PINNED SO IT CANNOT DRIFT SILENTLY. moduleKind calls versions/11 EXPLICIT
+        // -- it is -- and the ROUTING predicate still does not, because the run that would price moving netty
+        // onto javac's module path needs a modular corpus whose class-path jars still exist. Neither
+        // fernflower's nor timefold's do. Widen this the day they are rebuilt, not before.
+        assertEquals(PluginSourceSets.ModuleKind.EXPLICIT, PluginSourceSets.moduleKind(v11));
+        assertFalse(PluginSourceSets.isModularArtifact(v11),
+                "frozen: see isModularArtifact's javadoc for the run that unfreezes it");
+    }
+
+    /**
+     * A jar with the given manifest body (headers only, {@code Manifest-Version} is added here) and the given
+     * entries, each empty. Only the presence of an entry and the manifest headers are ever read.
+     */
+    private static File jar(Path path, String manifestBody, String... entries) throws IOException {
+        Manifest manifest = null;
+        if (manifestBody != null) {
+            manifest = new Manifest(new ByteArrayInputStream(
+                    ("Manifest-Version: 1.0\n" + manifestBody + "\n").getBytes(StandardCharsets.UTF_8)));
+        }
+        try (OutputStream out = Files.newOutputStream(path);
+             JarOutputStream jar = manifest == null ? new JarOutputStream(out) : new JarOutputStream(out, manifest)) {
+            for (String entry : entries) {
+                jar.putNextEntry(new JarEntry(entry));
+                jar.closeEntry();
+            }
+        }
+        return path.toFile();
+    }
+
+    /**
+     * ⛔⛔ AN INCUBATOR MODULE IS NOT IN THE {@code java.se} CLOSURE AND WIDENING {@code jmods} DOES NOT REACH
+     * IT: it must be in the ROOT SET of the compilation that uses it.
+     *
+     * <p>⚠ MEASURED on trino (2026-08-19): {@code core/trino-main} passes
+     * {@code --add-modules=jdk.incubator.vector}, {@code --compile-log} records it on 6 of trino's 209 source
+     * sets because it reads javac's own line, and NEITHER build plugin set it at all — so the same module parsed
+     * with one error the log route does not have: "package jdk.incubator.vector is not visible".
+     */
+    @Test
+    public void addModulesIsReadInBothSpellings() {
+        assertEquals(List.of("jdk.incubator.vector"),
+                PluginSourceSets.addModulesFrom(List.of("-g", "--add-modules=jdk.incubator.vector")),
+                "the = form, which is how trino writes it into a property");
+        assertEquals(List.of("jdk.incubator.vector"),
+                PluginSourceSets.addModulesFrom(List.of("--add-modules", "jdk.incubator.vector")),
+                "the two-argument form, which is how options.compilerArgs is usually written");
+        assertEquals(List.of("jdk.incubator.vector", "jdk.unsupported"),
+                PluginSourceSets.addModulesFrom(List.of("--add-modules=jdk.incubator.vector,jdk.unsupported")),
+                "comma-separated, as javac accepts");
+        assertEquals(List.of("a", "b"),
+                PluginSourceSets.addModulesFrom(List.of("--add-modules=a", "--add-modules", "b", "--add-modules=a")),
+                "accumulated across occurrences, in order, without duplicates");
+    }
+
+    /**
+     * ⛔⛔ THE ANSWER IS THE RESOLVED LIST, WHICH IS WHY IT IS ASKED OF THE BUILD AND NOT OF A BUILD FILE.
+     * OpenSearch appends {@code -Werror} to every compile task at {@code build.gradle:280} and subtracts it again
+     * in 12 subprojects ({@code libs/common/build.gradle:56}). Whether a set fails on a warning is the outcome of
+     * both, so a grep finds the word in 13 places and cannot say it of any of them; the list read here has had
+     * the subtraction applied.
+     */
+    @Test
+    public void warningFlagsAreTheResolvedPolicy() {
+        assertEquals(List.of("-Werror"),
+                PluginSourceSets.warningFlagsFrom(List.of("-g", "-Werror", "-parameters")));
+        assertEquals(List.of("-Werror", "-Xlint:cast", "-Xlint:divzero"),
+                PluginSourceSets.warningFlagsFrom(List.of("-Werror", "-Xlint:cast", "-Xlint:divzero")),
+                "the -Xlint family travels with -Werror: which warnings exist decides what -Werror makes fatal");
+        assertEquals(List.of("-nowarn"), PluginSourceSets.warningFlagsFrom(List.of("-nowarn")));
+        assertEquals(List.of("-Werror"),
+                PluginSourceSets.warningFlagsFrom(List.of("-Werror", "-Werror")),
+                "in order, without duplicates");
+    }
+
+    /**
+     * ⚠ CONTROL, AND THE DIRECTION THAT MATTERS. A set the build exempted must come back EMPTY, not absent-ish:
+     * "no -Werror here" is the answer that keeps a unit out of a blast radius, so a false positive would widen a
+     * worklist and a false negative would silently shrink it.
+     */
+    @Test
+    public void aSetWithNoWarningPolicyRecordsNone() {
+        assertEquals(List.of(), PluginSourceSets.warningFlagsFrom(List.of("-g", "-parameters", "-encoding", "UTF-8")));
+        assertEquals(List.of(), PluginSourceSets.warningFlagsFrom(null));
+        assertEquals(List.of(), PluginSourceSets.warningFlagsFrom(List.of()));
+    }
+
+    /**
+     * ⚠ NARROW ON PURPOSE. An attribute recorded without a failure demanding it is a guess about the future.
+     * These are real javac arguments and they are deliberately NOT warning policy.
+     */
+    @Test
+    public void onlyWarningPolicyIsWarningPolicy() {
+        assertFalse(PluginSourceSets.isWarningFlag("--enable-preview"));
+        assertFalse(PluginSourceSets.isWarningFlag("--add-exports"));
+        assertFalse(PluginSourceSets.isWarningFlag("-Xmaxerrs"));
+        assertFalse(PluginSourceSets.isWarningFlag(null));
+        assertTrue(PluginSourceSets.isWarningFlag("-Werror"));
+        assertTrue(PluginSourceSets.isWarningFlag("-Xlint:all"));
+    }
+
+    /**
+     * ⚠ {@code ALL-MODULE-PATH} and {@code ALL-DEFAULT} are javac's own pseudo-names, not modules. Passing one
+     * on would send the parse looking for a jmod that does not exist, which is a worse answer than dropping it.
+     */
+    @Test
+    public void addModulesDropsJavacsPseudoNames() {
+        assertEquals(List.of("jdk.incubator.vector"),
+                PluginSourceSets.addModulesFrom(List.of("--add-modules=ALL-MODULE-PATH,jdk.incubator.vector")));
+        assertEquals(List.of(), PluginSourceSets.addModulesFrom(List.of("--add-modules=ALL-DEFAULT")));
+    }
+
+    /** ⚠ CONTROL: a build that says nothing yields nothing, not a spurious module. */
+    @Test
+    public void addModulesIsEmptyWhenNothingSaysSo() {
+        assertEquals(List.of(), PluginSourceSets.addModulesFrom(List.of("-g", "-parameters")));
+        assertEquals(List.of(), PluginSourceSets.addModulesFrom(null));
+        assertEquals(List.of(), PluginSourceSets.addModulesFrom(List.of("--add-modules")),
+                "a trailing flag with no value names nothing");
     }
 }
